--- a/src/index.html
+++ b/src/index.html
@@ -501,7 +501,7 @@
             ">
               <div class="contacts__logos-container">
                 <div class="contacts__logo">
-                  <a href="#"
+                  <a href="/"
                     class="logo">
                     NA
                     <br>
@@ -585,12 +585,24 @@
               <div class="contacts__text">
                 <a
                   href="https://goo.gl/maps/LASFYeWXAo6UVAEh9"
-                  class="contacts__text--email">вул. М. Грушевського, 6; Київ, 01001
+                  class="contacts__text--email"
+                  target="_blank"
+                  >
+                  вул. М. Грушевського, 6; Київ, 01001
                 </a>
                 <br>
+                <a
+                href="tel:+38(044)278-13-57"
+                class="contacts__text--tel">
                 тел. +38 (044) 278-13-57
+                </a>
                 <br>
+                <a
+                href="tel:+38(044)278-74-54"
+                class="contacts__text--tel">
                 факс +38 (044) 278-74-54
+                </a>
+
                 <br>
                 <a
                 href="mailto:info@namu.kiev.ua"
