--- a/src/index.html
+++ b/src/index.html
@@ -469,6 +469,7 @@
 
                 <form
                   action="#"
+                  id="form"
                   class="form"
                   method="get"
                 >
