--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body class="page_content page_content-with-menu">
+  <body class="page_content">
     <header class="header grid grid-tablet grid-desctop">
       <a href="#menu" class="header_menu">
         <img 
