fix form and navigation

--- a/src/index.html
+++ b/src/index.html
@@ -309,7 +309,7 @@
             <form
               class="subscription__form"
               action="#"
-              method="get"
+              method="post"
             >
               <input
                 class="subscription__field"
@@ -318,7 +318,10 @@
                 type="email"
                 required
               >
-              <button id="send" class="subscription__button">
+              <button
+                id="send"
+                class="subscription__button"
+              >
                 <span class="subscription__arrow"></span>
               </button>
             </form>
