hover effects & favicon were added

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
     <link
-      rel="stylesheet"
+      rel="icon"
       type="image/x-icon"
       href="./images/logo.svg"
     >
@@ -35,11 +35,11 @@
 
           <div class="header__links">
             <div class="header__wrapper">
-              <a href="#" class="header__ticket">
+              <a href="#events" class="header__ticket">
                 КВИТКИ
               </a>
   
-              <a href="#" class="header__button-ticket">
+              <a href="#events" class="header__button-ticket">
                 <img
                   src="./images/arrow.svg"
                   alt="arrow image"
@@ -48,7 +48,7 @@
               </a>
             </div>
 
-            <a href="#" class="header__events">
+            <a href="#events" class="header__events">
               ПОДІЇ
             </a>
           </div>
@@ -286,8 +286,16 @@
             <a href="#" class="footer__logo"></a>
   
             <div class="footer__links">
-              <a href="#" class="footer__link footer__link--facebook"></a>
-              <a href="#" class="footer__link footer__link--instagram"></a>
+              <a
+                href="https://facebook.com/"
+                class="footer__link footer__link--facebook"
+                target="_blank"
+              ></a>
+              <a
+                href="https://www.instagram.com/"
+                class="footer__link footer__link--instagram"
+                target="_blank"
+              ></a>
             </div>
           </div>
   
