Header and Events section were created

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,147 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Національний художній музей</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/favicon.png"
+    >
+
     <link rel="stylesheet" href="./styles/main.scss">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:
+      wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    >
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="page__header header">
+      <div class="header__grid grid">
+        <h1 class="header__title">
+          Художній музей
+        </h1>
+
+        <button class="header__button button">
+          <div class="button__text">
+            Квитки
+          </div>
+
+          <div class="button__arrow"></div>
+        </button>
+
+        <a href="#events" class="header__side-comment">
+          Події
+        </a>
+
+        <div class="header__image-box">
+          <a href="#" class="header__logo-link">
+            <img
+              src="./images/namu-logo.png"
+              alt="NAMU logo"
+              class="header__logo"
+            >
+          </a>
+
+          <img
+            src="./images/header-image.jpg"
+            alt="Museum main building"
+            class="header__image"
+          >
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <section class="page__section events" id="events">
+        <div class="grid">
+          <h2 class="events__title">
+            Актуальні події
+          </h2>
+        </div>
+
+        <div class="events__grid grid">
+          <div class="events__image-box events__image-box--1">
+            <img
+              src="./images/events-painting-1.jpg"
+              alt="Serhiy Vasylkivsky painting"
+              class="events__image"
+            >
+          </div>
+
+          <article class="events__article events__article--1">
+            <div class="events__event">
+              Виставка
+            </div>
+            <div class="events__date">
+              26.08-29.11.2022
+            </div>
+            <h3 class="events__event-title">
+              Йду i повертаюсь
+            </h3>
+            <p class="events__text">
+              Національний Художній Музей України презентує
+              унікальну частину колекції Градобанку - українське
+              мистецтво другої половини 1980-1995 років.
+            </p>
+          </article>
+
+          <div class="events__image-box events__image-box--2">
+            <img
+              src="./images/events-painting-2.jpg"
+              alt="Petro Kholodnyi painting"
+              class="events__image"
+            >
+          </div>
+
+          <article class="events__article events__article--2">
+            <div class="events__event">
+              Виставка
+            </div>
+            <div class="events__date">
+              26.08-29.11.2022
+            </div>
+            <h3 class="events__event-title">
+              I спогади i мрії
+            </h3>
+            <p class="events__text">
+              Національний художній музей України
+              до 100 річчя від дня народження
+              видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну
+              виставку «І спогади i мрії».
+            </p>
+          </article>
+        </div>
+
+        <div class="events__lecture-image-box">
+          <img
+            src="./images/events-painting-3.jpg"
+            alt="Serhiy Vasylkivsky painting-2"
+            class="events__lecture-image"
+          >
+        </div>
+
+        <article class="events__lecture-container">
+          <div class="events__event events__event--lecture">
+            Лекція
+          </div>
+          <div class="events__date events__date--lecture">
+            26/11/2022 - 11:00
+          </div>
+          <h3 class="events__lecture-title">
+            Від класицизму до романтизму
+          </h3>
+        </article>
+      </section>
+    </main>
+
+    <footer>
+    </footer>
   </body>
 </html>
