added prevent default

--- a/src/index.html
+++ b/src/index.html
@@ -318,7 +318,7 @@
                 name="email"
                 class="subscribe__button-text"
                 required>
-              <button type="submit" class="subscribe__button-search">></button>
+              <button type="submit" class="subscribe__button-search checkbox">></button>
             </form>
           </div>
         </div>
