Nav-menu was added

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,76 @@
   </head>
   <body class="page__body">
     <header class="page__header header">
+      <div class="header__menu menu">
+        <div class="menu__icon-box">
+          <a href="#nav-menu" class="menu__icon-link">
+            <img
+              src="./images/menu-icon.png"
+              alt="NAMU menu icon"
+              class="menu__icon"
+            >
+          </a>
+        </div>
+
+        <div class="menu__container" id="nav-menu">
+          <nav class="menu__grid grid">
+            <a href="#" class="menu__close-link">
+              <img
+                src="./images/menu-close-icon.png"
+                alt="Menu close icon"
+                class="menu__close-icon"
+              >
+            </a>
+
+            <ul class="menu__list">
+              <li class="menu__item menu__item--1">
+                <a href="#" class="menu__link">
+                  Галерея
+                </a>
+              </li>
+              <li class="menu__item menu__item--2">
+                <a href="#" class="menu__link">
+                  Виставки та події
+                </a>
+              </li>
+              <li class="menu__item menu__item--3">
+                <a href="#" class="menu__link">
+                  Про нас
+                </a>
+              </li>
+              <li class="menu__item menu__item--4">
+                <a href="#" class="menu__link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+
+            <div class="menu__schedule">
+              <p class="menu__schedule-title">
+                Графік роботи
+              </p>
+
+              <p class="menu__working-hours">
+                <bold>12:00 — 20:00</bold> середа
+                <br>
+                <bold>12:00 — 20:00</bold> четвер
+                <br>
+                <bold>12:00 — 20:00</bold> п’ятниця
+                <br>
+                <bold>11:00 — 19:00</bold> субота
+                <br>
+                <bold>11:00 — 19:00</bold> неділя
+              </p>
+
+              <p class="menu__weekends">
+                <bold>Вихідні:</bold> понеділок, вівторок. <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
+          </nav>
+        </div>
+      </div>
       <div class="header__grid grid">
         <h1 class="header__title">
           Художній музей
