--- a/src/index.html
+++ b/src/index.html
@@ -345,12 +345,12 @@
             <div class="footer__social">
               <a
                 class="icon icon--facebook"
-                href="#"
+                href="https://www.facebook.com/namu.museum/"
               ></a>
 
               <a
                 class="icon icon--instagram"
-                href="#"
+                href="https://www.instagram.com/namu.museum/"
               ></a>
             </div>
           </div>
