--- a/src/index.html
+++ b/src/index.html
@@ -164,7 +164,7 @@
       </section>
 
       <section class="page__section gallery" id="gallery">
-        <div class="container container--for-galery">
+        <div class="container">
           <h1 class="gallery__title">Галерея</h1>
           <div class="gallery__slider slider">
             <div class="slider__line">
@@ -385,7 +385,7 @@
         </div>
         <div class="footer__copyright-rights">
           <p class="footer__copyright footer__copyright-author">Designed by Zhyriada Marina</p>
-          <p class="footer__copyright footer__copyright-year">Copyright &#169 2019. All Rights Reserved.</p>
+          <p class="footer__copyright footer__copyright-year">Copyright &#169 2022. All Rights Reserved.</p>
         </div>
       </div>
     </footer>
