Fixed links and added hover to picture

--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,7 @@
         <a href="#" class="header__ticket-link"></a>
       </div>
 
-      <div class="header__events">
-        ПОДІЇ
-      </div>
+      <a href="#" class="header__events">ПОДІЇ</a>
 
       <nav class="menu" id="menu">
         <div class="menu__content">
@@ -332,15 +330,13 @@
 
               <div class="footer__socials">
                 <a
-                  href="https:/facebook.com"
+                  href="#"
                   class="footer__link footer__link--facebook"
-                  target="_blank"
                 >
                 </a>
                 <a
-                  href="https:/instagram.com"
+                  href="#"
                   class="footer__link footer__link--instagram"
-                  target="_blank"
                 >
                 </a>
               </div>
