--- a/src/index.html
+++ b/src/index.html
@@ -400,7 +400,7 @@
               >
                 <input 
                   type="email"
-                  placeholder="Email"
+                  placeholder="E-mail"
                   class="form__content"
                   required
                 >
@@ -583,7 +583,7 @@
         </p>
 
         <p class="footer__copyright-paragraph">
-          Copyright © 2019. All Rights Reserved.
+          Copyright © 2022. All Rights Reserved.
         </p>
       </div>
     </footer>
