page was coorected

--- a/src/index.html
+++ b/src/index.html
@@ -267,6 +267,7 @@
           >
             <label for="email">
               <input
+                name="email"
                 type="email"
                 placeholder="E-mail"
                 class="subscribe__email"
