museum-next-commit

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museum</title>
+    <link rel="icon" type="image/x-icon" href="./images/NA MU.png">
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -19,7 +20,7 @@
           <img src="./images/burger.png" alt="menu">
         </a>
         <a
-          href="https://namumuseum.business.site/"
+          href="#"
           class="logo header__logo">
           NA
           <br>
@@ -47,12 +48,17 @@
           <button class="button__box">
             <a
               href="https://kyiv-online.net/places/museum/natsionalnyj-hudozhnij-muzej-ukrajiny/" class="button__text"
+              target="_blank"
             >
               КВИТКИ
             </a>
           </button>
           <button class="button__angle">
-            <img src="./images/Angle.png" alt="Angle">
+            <img
+              src="./images/Angle.png"
+              alt="Angle"
+              class="button__angle-hover"
+            >
           </button>
         </div>
       </div>
@@ -132,6 +138,7 @@
                 <a
                   href="http://chernozem.info/event/ydu-i-povertayus/"
                   class="subtitle__text"
+                  target="_blank"
                 >
                   Йду і повертаюсь
                   <button class="subtitle__button"></button>
@@ -158,6 +165,7 @@
                 <a
                   href="http://museum.net.ua/news/i-spogadi-i-mri%D1%97/"
                   class="subtitle__text"
+                  target="_blank"
                 >
                   І спогади і мрії
                   <button class="subtitle__button"></button>
@@ -181,6 +189,7 @@
               <a
                 href="https://ms-my.facebook.com/events/%D0%BD%D0%B0%D1%86%D1%96%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%B8%D0%B9-%D1%85%D1%83%D0%B4%D0%BE%D0%B6%D0%BD%D1%96%D0%B9-%D0%BC%D1%83%D0%B7%D0%B5%D0%B9-%D1%83%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B8/%D0%BB%D0%B5%D0%BA%D1%86%D1%96%D1%8F-%D0%B2%D1%96%D0%B4-%D0%BA%D0%BB%D0%B0%D1%81%D0%B8%D1%86%D0%B8%D0%B7%D0%BC%D1%83-%D0%B4%D0%BE-%D1%80%D0%BE%D0%BC%D0%B0%D0%BD%D1%82%D0%B8%D0%B7%D0%BC%D1%83/631519011373880/"
                 class="subtitle__text subtitle__text-last"
+                target="_blank"
               >
                 Від класицизму до романтизму
               </a>
@@ -194,54 +203,50 @@
           Галерея
         </h2>
         <div class="gallery__image">
-          <div class="gallery__block">
-            <img
+          <img
               src="./images/Rectangle3.png"
               alt="Rectangle"
               class="gallery__image-painting
               gallery__image-painting-bride"
             >
-            <img
-              src="./images/Rectangle2.png"
-              alt="Rectangle"
-              class="gallery__image-painting gallery__image-painting-goose"
-              hidden
-            >
-            <img
-              src="./images/Stripe1.png"
-              alt="Stripe"
-              class="gallery__image-stripe1"
-            >
-            <img
-              src="./images/Stripe2.png"
-              alt="Stripe"
-              class="gallery__image-stripe2"
-              hidden
-            >
-            <img
-              src="./images/winter.png"
-              alt="Winter"
-              class="gallery__image-painting
-              gallery__image-painting-winter"
-              hidden
-            >
-          </div>
-          <div class="gallery__block">
-            <img
-              src="./images/park.png"
-              alt="Park"
-              class="gallery__image-painting
-              gallery__image-painting-park"
-              hidden
-            >
-            <img
-              src="./images/sea.png"
-              alt="Sea"
-              class="gallery__image-painting
-              gallery__image-painting-sea"
-              hidden
-            >
-          </div>
+          <img
+            src="./images/Rectangle2.png"
+            alt="Rectangle"
+            class="gallery__image-painting gallery__image-painting-goose"
+            hidden
+          >
+          <img
+            src="./images/Stripe1.png"
+            alt="Stripe"
+            class="gallery__image-stripe1"
+          >
+          <img
+            src="./images/Stripe2.png"
+            alt="Stripe"
+            class="gallery__image-stripe2"
+            hidden
+          >
+          <img
+            src="./images/winter.png"
+            alt="Winter"
+            class="gallery__image-painting
+            gallery__image-painting-winter"
+            hidden
+          >
+          <img
+            src="./images/park.png"
+            alt="Park"
+            class="gallery__image-painting
+            gallery__image-painting-park"
+            hidden
+          >
+          <img
+            src="./images/sea.png"
+            alt="Sea"
+            class="gallery__image-painting
+            gallery__image-painting-sea"
+            hidden
+          >
         </div>
         <div class="gallery__carousel">
           <a href="#" class="gallery__button"></a>
@@ -258,19 +263,21 @@
         <p class="subscription__text">
           Бути в курсі всіх актуальних подій та останніх новин.
         </p>
-        <form class="form">
-          <label>
+        <form class="form" method="post">
+          <label for="mail">
             <input
+              name="email"
               type="email"
               placeholder="E-mail"
               class="form__mail"
+              id="mail"
             >
           </label>
           <button class="form__angle">
             <img
-            src="./images/AngleBl.png"
-            alt="Angle"
-          >
+              src="./images/AngleBl.png"
+              alt="Angle"
+            >
           </button>
         </form>
       </section>
@@ -278,21 +285,27 @@
       <section class="contacts" id="contacts">
         <div class="contacts__content">
           <div class="contacts__header">
-            <a href="https://namumuseum.business.site/" class="logo contacts__logo">
+            <a href="#" class="logo contacts__logo">
               NA
               <br>
                MU
             </a>
             <div class="contacts__chain">
-              <a href="https://uk-ua.facebook.com/namu.museum/">
+              <a
+                href="https://uk-ua.facebook.com/namu.museum/"
+                target="_blank"
+              >
                 <img
-                  src="./images/Facebook.png"
+                  src="./images/Facebook (1).svg"
                   alt="Facebook"
                 >
               </a>
-              <a href="https://www.instagram.com/accounts/login/?next=%2Fnamu.museum%2F">
+              <a
+                href="https://www.instagram.com/accounts/login/?next=%2Fnamu.museum%2F"
+                target="_blank"
+              >
                 <img
-                  src="./images/instagramm.png"
+                  src="./images/instagramm.svg"
                   alt="instagramm"
                 >
               </a>
@@ -336,6 +349,7 @@
                   <a
                     href="https://goo.gl/maps/1vzpoJNx8MmXvVwp8"
                     class="schedule__link"
+                    target="_blank"
                   >
                     вул. М. Грушевського, 6; Київ, 01001
                   </a>
@@ -416,7 +430,6 @@
           </div>
         </div>
       </section>
-      
     </main>
 
     <footer class="footer">
@@ -424,7 +437,7 @@
         Designed by Zhyriada Marina
       </p>
       <p class="footer__text">
-        Copyright © 2019. All Rights Reserved.
+        Copyright © 2022. All Rights Reserved.
       </p>
     </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
