--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,302 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
     <script type="text/javascript" src="scripts/main.js"></script>
+    <section class="header page__section page__section--header">
+
+      <div class="container">
+        <div class="header__top">
+          <a href="#menu" class="header__icon">
+            <img
+              src="./images/icon/menu_header.svg" alt="header__icon"
+              class="icon icon__menu"
+            >
+          </a>
+          <a href="#" class="header__logo">
+            <img
+              src="./images/icon/NA_MU_logo.svg"
+              alt="logo"
+              class="logo"
+            >
+          </a>
+        </div>
+        <h2 class="header__title">
+          ХУДОЖНІЙ МУЗЕЙ
+        </h2>
+        <div class="header__drop-menu">
+          <div class="header__ticket">
+            КВИТКИ
+          </div>
+          <a href="#" class="header__button button button--header">
+          </a>
+        </div>
+        <p class="header__events">
+          ПОДІЇ
+        </p>
+      </div>
+    </section>
+    <nav class="menu page__menu" id="menu">
+      <div class="menu__green">
+        <div class="container">
+          <div class="menu__block">
+            <a href="#" class="menu__icon">
+              <img
+                  src="./images/icon/icon_close.svg" alt="close"
+                  class="icon icon--close"
+              >
+            </a>
+            <div class="menu__top">
+
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a href="#" class="menu__link">
+                      Галерея
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">
+                      Про Нас
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a href="#"  class="menu__link">
+                      Виставки та події
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">
+                      Контакти
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="menu__line"></div>
+            <div class="menu__content">
+              <div class="menu__content menu__content--title">
+                Графік роботи
+              </div>
+              <div class="menu__content-description">
+                <div class="menu__content-description menu__content-description--time">
+                  <div>
+                    12:00 — 20:00 <h5>середа</h5>
+                    <br>
+                    12:00 — 20:00 <h5>четвер</h5>
+                    <br>
+                    12:00 — 20:00 <h5>п’ятниця</h5>
+                    <br>
+                    11:00 — 19:00 <h5>субота</h5>
+                    <br>
+                    11:00 — 19:00 <h5>неділя</h5>
+                    <br>
+                  </div>
+                </div>
+                <div class="menu__content-description menu__content-description--note">
+                  <div>
+                    Вихідні:
+                    <h5>
+                      понеділок, вівторок
+                    </h5>
+                    <br>
+                    <h5>
+                      Каса припиняє роботу за 1 годину
+                      до закриття музею
+                    </h5>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </nav>
+    <section class="current-events page__section page__section--events">
+      <div class="container">
+        <div class="current-events__title">
+          Актуальні події
+        </div>
+        <div class="current-events__block">
+          <div class="current-events__picture current-events__picture--go-back"></div>
+          <div class="current-events__content">
+            <div class="current-events__content-event event">
+              <div class=" event event--name">
+              ВИСТАВКА
+              </div>
+              <div class="event event--date">
+                26.08-29.11.2019
+              </div>
+            </div>
+            <div class="current-events__content current-events__content--name">
+              Йду і повертаюсь
+            </div>
+            <div class="current-events__content current-events__content--description">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980&#8209;1995 років.
+            </div>
+          </div>
+        </div>
+        <div class="current-events__block current-events__block--last">
+          <div class="current-events__picture current-events__picture--memories-dreams"></div>
+          <div class="current-events__content">
+
+            <div class="current-events__content-event event">
+              <div class=" event event--name">
+              ВИСТАВКА
+              </div>
+              <div class="event event--date">
+                26.08-29.11.2019
+              </div>
+            </div>
+            <div class="current-events__content current-events__content--name">
+              І спогади і мрії
+            </div>
+            <div class="current-events__content current-events__content--description">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="lecture page__section page__section--lecture">
+      <div class="container lecture__container">
+        <div class="lecture__info">
+          <div class="lecture__info-content">
+            <div class="lecture__info-event event">
+              <div class="event event--name">
+                ЛЕКЦІЯ
+              </div>
+              <div class="event event--date lecture__info-content--date">
+                26/08/2019 - 11:00
+              </div>
+            </div>
+            <div class="lecture__info-title">
+              Від класицизму до романтизму
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="gallery">
+      <div class="container">
+        <div class="gallery__title">
+          Галерея
+        </div>
+        <div class="gallery__slider page__section page__section--gallery">
+          <input
+            checked
+            name="control"
+            type="radio"
+            class="gallery__slider-control"
+            id="switch-1"
+          >
+          <input
+            name="control"
+            type="radio"
+            class="gallery__slider-control"
+            id="switch-2"
+          >
+          <input
+            name="control"
+            type="radio"
+            class="gallery__slider-control"
+            id="switch-3"
+          >
+          <input
+            name="control"
+            type="radio"
+            class="gallery__slider-control"
+            id="switch-4"
+          >
+          <div class="gallery__slider-slides">
+            <div class="gallery__slider-slides-overflow">
+              <div class="gallery__slider-image">
+                <div class="gallery__slider-photo">
+                  <img
+                    src="./images/pictures/slider/photo1_mobile.png"
+                    alt="photo-1"
+                    class="gallery__slider-img"
+                  >
+                </div>
+                <div class="gallery__slider-photo">
+                  <img
+                  src="./images/pictures/slider/photo1_mobile.png"
+                  alt="photo-1"
+                  class="gallery__slider-img"
+                >
+                </div>
+                <div class="gallery__slider-photo">
+                  <img
+                  src="./images/pictures/slider/photo1_mobile.png"
+                  alt="photo-1"
+                  class="gallery__slider-img"
+                >
+                </div>
+                <div class="gallery__slider-photo">
+                  <img
+                  src="./images/pictures/slider/photo1_mobile.png"
+                  alt="photo-1"
+                  class="gallery__slider-img"
+                >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="gallery__slider-switch">
+            <label for="switch-1" class="gallery__slider-switch-label"></label>
+            <label for="switch-2" class="gallery__slider-switch-label"></label>
+            <label for="switch-3" class="gallery__slider-switch-label"></label>
+            <label for="switch-4" class="gallery__slider-switch-label"></label>
+          </div>
+        </div>
+        <div class="gallery__images grid">
+          <div class="grid">
+            <div class="gallery__desktop grid__item grid__item--1-4">
+              <img
+                src="./images/pictures/gallery_desktop/1.png"
+                alt="img-1"
+                class="gallery__image"
+              >
+            </div>
+            <div class="gallery__desktop grid__item grid__item--5-12">
+              <img
+                src="./images/pictures/gallery_desktop/2.png"
+                alt="img-2"
+                class="gallery__image"
+              >
+            </div>
+          </div>
+          <div class="grid">
+            <div class="
+              gallery__desktop
+              grid__item
+              grid__item--1-8"
+            >
+                <img
+                  src="./images/pictures/gallery_desktop/3.png"
+                  alt="img-3"
+                  class="gallery__image"
+                >
+            </div>
+            <div class="gallery__desktop grid__item grid__item--9-12">
+              <img
+                src="./images/pictures/gallery_desktop/4.png"
+                alt="img-4"
+                class="gallery__image"
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
