select slider block

--- a/src/index.html
+++ b/src/index.html
@@ -186,76 +186,76 @@
         </div>
       </div>
     </section>
-    <section class="gallery">
+    <section class="gallery page__section page__section--gallery">
       <div class="container">
         <div class="gallery__title">
           Галерея
         </div>
-        <div class="gallery__slider page__section page__section--gallery">
+        <div class="slider page__section page__section--gallery">
           <input
             checked
             name="control"
             type="radio"
-            class="gallery__slider-control"
+            class="slider__control"
             id="switch-1"
           >
           <input
             name="control"
             type="radio"
-            class="gallery__slider-control"
+            class="slider__control"
             id="switch-2"
           >
           <input
             name="control"
             type="radio"
-            class="gallery__slider-control"
+            class="slider__control"
             id="switch-3"
           >
           <input
             name="control"
             type="radio"
-            class="gallery__slider-control"
+            class="slider__control"
             id="switch-4"
           >
-          <div class="gallery__slider-slides">
-            <div class="gallery__slider-slides-overflow">
-              <div class="gallery__slider-image">
-                <div class="gallery__slider-photo">
+          <div class="slider__slides">
+            <div class="slider__slides-overflow">
+              <div class="slider__image">
+                <div class="slider__photo">
                   <img
                     src="./images/pictures/slider/photo1_mobile.png"
                     alt="photo-1"
-                    class="gallery__slider-img"
+                    class="slider__img"
                   >
                 </div>
-                <div class="gallery__slider-photo">
+                <div class="slider__photo">
                   <img
                   src="./images/pictures/slider/photo1_mobile.png"
                   alt="photo-1"
-                  class="gallery__slider-img"
+                  class="slider__img"
                 >
                 </div>
-                <div class="gallery__slider-photo">
+                <div class="slider__photo">
                   <img
                   src="./images/pictures/slider/photo1_mobile.png"
                   alt="photo-1"
-                  class="gallery__slider-img"
+                  class="slider__img"
                 >
                 </div>
-                <div class="gallery__slider-photo">
+                <div class="slider__photo">
                   <img
                   src="./images/pictures/slider/photo1_mobile.png"
                   alt="photo-1"
-                  class="gallery__slider-img"
+                  class="slider__img"
                 >
                 </div>
               </div>
             </div>
           </div>
-          <div class="gallery__slider-switch">
-            <label for="switch-1" class="gallery__slider-switch-label"></label>
-            <label for="switch-2" class="gallery__slider-switch-label"></label>
-            <label for="switch-3" class="gallery__slider-switch-label"></label>
-            <label for="switch-4" class="gallery__slider-switch-label"></label>
+          <div class="slider__switch">
+            <label for="switch-1" class="slider__switch-label"></label>
+            <label for="switch-2" class="slider__switch-label"></label>
+            <label for="switch-3" class="slider__switch-label"></label>
+            <label for="switch-4" class="slider__switch-label"></label>
           </div>
         </div>
         <div class="gallery__images grid">
@@ -281,11 +281,11 @@
               grid__item
               grid__item--1-8"
             >
-                <img
-                  src="./images/pictures/gallery_desktop/3.png"
-                  alt="img-3"
-                  class="gallery__image"
-                >
+              <img
+                src="./images/pictures/gallery_desktop/3.png"
+                alt="img-3"
+                class="gallery__image"
+              >
             </div>
             <div class="gallery__desktop grid__item grid__item--9-12">
               <img
